<resources>
    <string name="app_name">TestJJSDK</string>

    <string name="main_sensor">Sensor Example</string>
    <string name="main_camera">Camera Example</string>
    <string name="main_device_control">Device Control Example</string>
    <string name="main_all">All Features</string>

    <string name="accelerometer">ACCELEROMETER :</string>
    <string name="gravity">GRAVITY :</string>
    <string name="gyroscope">GYROSCOPE :</string>
    <string name="light">LIGHT :</string>
    <string name="linear_accelerometer">LINEAR ACCELEROMETER :</string>
    <string name="magnetic_field">COMPASS :</string>
    <string name="rotation_vector">ROTATION_VECTOR :</string>

    <string name="sensor_value1d">%d hz.</string>
    <string name="sensor_value1f">%.1f\t</string>
    <string name="sensor_value10">0</string>
    <string name="sensor_value30">0, 0, 0</string>
    <string name="sensor_value3">%.5f\t, %.5f\t, %.5f</string>
    <string name="sensor_value40">0, 0, 0, 0</string>
    <string name="sensor_value4">%.5f\t, %.5f\t, %.5f, %.5f</string>

    <string name="camera_fps">%d fps.</string>
    <string name="start_preview">Start Preview</string>
    <string name="stop_preview">Stop Preview</string>
    <string name="take_photo">Take photo</string>
    <string name="brightness">Brightness :</string>
    <string name="contrast">Contrast :</string>
    <string name="sharpness">Sharpness :</string>
    <string name="gamma">Gamma :</string>
    <string name="hue">Hue :</string>
    <string name="saturation">Saturation :</string>
    <string name="resolution">Resolution :</string>
    <string name="power_line_frequency">power line frequency :</string>
    <string name="record">Record</string>
    <string name="recording">Recording</string>
    <string name="tfe_od_app_name" translation_description="Object Detection demo app [CHAR_LIMIT=40]">TFL Detect</string>
    <string name="tfe_od_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>
    <string name="acc">Acc</string>
    <string name="Gyro">Gyro</string>
    <string name="GPS_permissions">Debes aceptar los permisos para utilizar la aplicación</string>
    <string name="btn_loc_gps">Obtener Localización GPS</string>
    <string name="btn_loc_net">Obtener Localización por Red</string>
    <string name="txt_view_lat">Latitud:</string>
    <string name="txt_view_lon">Longitud:</string>
    <string name="txt_view_alt">Altitud:</string>
    <string name="GPS_disabled">Parece que tu GPS está desactivado, ¿deseas activarlo?</string>
    <string name="Network_disabled">Parece que tu red está desactivada, ¿deseas activarla?</string>
    <string name="btn_yes">Si</string>
    <string name="btn_no">No</string>
    <string name="btn_close">Cerrar</string>
    <string name="btn_watch_permissions">Ver Permisos</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps2">MapsActivity2</string>
</resources>
